<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.baithuchanhso2.MainActivity">
    <EditText
        android:id="@+id/edt_name"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number" />
    <TextView
        android:maxLength="11"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/gioi_tinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/rbtn_male"
            android:text="@string/male"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_female"
            android:text="@string/female"
            android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RadioGroup>
    <Button
        android:onClick="addContact"
        android:id="@+id/btn_add_contac"
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:text="@string/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lv_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>